[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/advanced_pixel-7.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/UI/Cockpit_HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[node name="Cockpit_HUD" type="Node2D"]
visible = false
script = ExtResource( 2 )

[node name="Durability_lbl" type="Label" parent="."]
modulate = Color( 0.596078, 0.882353, 0.25098, 1 )
margin_left = 16.0
margin_top = 16.0
margin_right = 136.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
text = "Durability: 34/34"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shield_lbl" type="Label" parent="."]
modulate = Color( 0.25098, 0.882353, 0.85098, 1 )
margin_left = 16.0
margin_top = 48.0
margin_right = 136.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
text = "Shield: 23/23"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shoot_rate_lbl" type="Label" parent="."]
modulate = Color( 0.670588, 0.470588, 1, 1 )
margin_left = 16.0
margin_top = 80.0
margin_right = 136.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 1 )
text = "Shoot Rate: 0.01"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Roadmap_btn" type="Button" parent="."]
margin_left = 16.0
margin_top = 592.0
margin_right = 96.0
margin_bottom = 624.0
custom_fonts/font = SubResource( 2 )
disabled = true
text = "Go On!"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Roadmap_btn" to="." method="_on_Roadmap_btn_pressed"]
